# biopp

numcalc/: AUTHORS  ChangeLog  Makefile.am  NumCalc.spec  autoclean.sh  configure.ac
numcalc/NumCalc/: AbstractDiscreteDistribution.cpp  AbstractDiscreteDistribution.h  AbstractNumericalDerivative.h  AbstractOptimizer.cpp  AbstractOptimizer.h  AbstractParameterAliasable.cpp  AbstractParameterAliasable.h  AbstractParametrizable.cpp  AbstractParametrizable.h  AutoParameter.cpp  AutoParameter.h  BrentOneDimension.cpp  BrentOneDimension.h  ConjugateGradientMultiDimensions.cpp  ConjugateGradientMultiDimensions.h  ConstantDistribution.cpp  ConstantDistribution.h  Constraints.h  DataTable.cpp  DataTable.h  DataTableExceptions.h  DirectionFunction.cpp  DirectionFunction.h  DiscreteDistribution.h  Domain.cpp  Domain.h  DownhillSimplexMethod.cpp  DownhillSimplexMethod.h  EigenValue.h  ExponentialDiscreteDistribution.cpp  ExponentialDiscreteDistribution.h  FivePointsNumericalDerivative.cpp  FivePointsNumericalDerivative.h  FunctionTools.cpp  FunctionTools.h  Functions.h  GammaDiscreteDistribution.cpp  GammaDiscreteDistribution.h  GoldenSectionSearch.cpp  GoldenSectionSearch.h  (+67 more)
numcalc/debian/: changelog  control  copyright  libbpp-numcalc-dev.dirs  rules
phyllib/Phyl/: DSO78.h
seqlib/Seq/: DefaultAlphabet.h  PhredPoly.h
utils/: AUTHORS  ChangeLog  Makefile.am  Utils.spec  autoclean.sh  configure.ac
utils/Utils/: Makefile.am  exceptions
utils/debian/: changelog  control  libbpp-utils-dev.dirs  rules
